--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 
                     <p><img src="immagini/call96.png" alt="Telefono"><a target="_blank" href = "tel:+393703299529">+39 370 329 9529</a></p>
-                    <p><img src="immagini/email96.png" alt="Email"><a target="_blank" href = "mailto:daniel.tonin.25@stud.itsaltoadriatico.it">daniel.tonin.25@stud.itsaltoadriatico.it</a></p>
+                    <p><img src="immagini/email96.png" alt="Email"><a target="_blank" href = "mailto:danieltonin06@gmail.com">danieltonin06@gmail.com</a></p>
                     <p><img src="immagini/map96.png"  alt="Indirizzo"><a target="_blank" href = "https://maps.app.goo.gl/9ztPhubqTb76v9QJ6">Conegliano (TV), Via Stadio 19</a></p>
                 
 
