pop up sviluppo web

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="competenze">
-                <p>sviluppo web (PHP, Javascript)</p>
+                <p>Sviluppo Web e Applicazioni</p>
                 <button onclick="apriPopup(3)">Dettagli</button>
             </div>
 
