--- a/popUp/popUpSvilWeb.html
+++ b/popUp/popUpSvilWeb.html
@@ -1,37 +1,48 @@
 <div id="popupOverlay" class="overlay" onclick="chiudiFuori(event)">
     <div class="popup">
         <span class="close" onclick="chiudiPopup()">&times;</span>
-        <h2>sviluppo web (PHP, Javascript)</h2>
-        <p>Offro competenze complete nella configurazione, 
-            gestione e manutenzione di postazioni informatiche e infrastrutture di rete, 
-            con un approccio orientato all’efficienza, 
-            alla sicurezza e alla continuità operativa.
+        <h2>Sviluppo Web e Applicazioni</h2>
+        <p>Realizzo soluzioni web dinamiche e performanti, 
+            curando sia il lato backend che frontend, 
+            con particolare attenzione a usabilità, 
+            organizzazione del codice e integrazione con database relazionali.
         </p>
 
 
-        <h3>💻 Configurazione e gestione PC</h3>
+        <h3>🖥️ Backend Development</h3>
 
         <ul>
 
-            <li>Installazione e configurazione di sistemi operativi (Windows, Linux)</li>
-            <li>Assemblaggio e upgrade hardware</li>
-            <li>Installazione e gestione software aziendali</li>
-            <li>Configurazione account utente e criteri di sicurezza</li>
-            <li>Diagnostica e risoluzione guasti hardware/software</li>
-            <li>Backup e ripristino dati</li>
+            <li>Sviluppo applicazioni web in PHP</li>
+            <li>Gestione logiche server-side e strutturazione architettura applicativa</li>
+            <li>Integrazione e progettazione database relazionali</li>
+            <li>Utilizzo di MySQL e PostgreSQL per la modellazione e gestione dei dati</li>
+
 
         </ul>
 
-        <h3>🌐 Gestione reti informatiche</h3>
+        <h3>🎨 Frontend Development</h3>
 
         <ul>
 
-            <li>Configurazione reti LAN e Wi-Fi</li>
-            <li>Installazione e configurazione router e switch</li>
-            <li>Gestione indirizzamento IP e condivisioni di rete</li>
-            <li>Configurazione stampanti e dispositivi di rete</li>
+            <li>Sviluppo interfacce con HTML5, CSS3 e JavaScript</li>
+            <li>Realizzazione layout responsive e compatibili cross-browser</li>
+            <li>Strutturazione UI orientata all’esperienza utente</li>
+            <li>Manipolazione DOM e gestione interazioni dinamiche</li>
             
 
         </ul>
+
+        <h3>🎯 Progettazione e UI/UX</h3>
+
+        <ul>
+
+            <li>Prototipazione e progettazione interfacce con Figma</li>
+            <li>Cura della coerenza visiva e dell’esperienza utente</li>
+            <li>Collaborazione tra design e sviluppo</li>
+            
+
+        </ul>
+
     </div>
 </div>
