--- a/popUp/popUpProgOgg.html
+++ b/popUp/popUpProgOgg.html
@@ -1,7 +1,38 @@
 <div id="popupOverlay" class="overlay" onclick="chiudiFuori(event)">
     <div class="popup">
         <span class="close" onclick="chiudiPopup()">&times;</span>
-        <h2>programmazione di base orientata agli oggetti</h2>
-        <p>Questo è un pop up con funzioni JavaScript.</p>
+        <h2>Programmazione di base orientata agli oggetti</h2>
+
+        <p>Sviluppo applicazioni seguendo i principi della programmazione orientata agli oggetti (OOP), 
+            con particolare attenzione alla struttura del codice, 
+            alla modularità e alla manutenibilità del software.
+        </p>
+
+
+        <h3>☕ Sviluppo in Java</h3>
+
+        <ul>
+
+            <li>Realizzazione applicazioni desktop in Java</li>
+            <li>Sviluppo interfacce grafiche con Java Swing</li>
+            <li>Applicazione dei principi OOP: classi, oggetti, incapsulamento, ereditarietà e polimorfismo</li>
+            <li>Gestione eventi e logica applicativa</li>
+
+
+        </ul>
+
+        <h3>🔷 Sviluppo in C#</h3>
+
+        <ul>
+
+            <li>Sviluppo applicazioni console in C#</li>
+            <li>Implementazione logiche applicative senza utilizzo di librerie grafiche</li>
+            <li>Gestione input/output e strutture dati</li>
+            <li>Applicazione dei concetti fondamentali OOP</li>
+            
+
+        </ul>
+
+        
     </div>
 </div>
