css compatibile con tutti i dispositivi v1

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <img src = "immagini/xampplogo.png">
                 
             </div>
-            <img src = "immagini/github100.png">
+            <img class = "githubimg"src = "immagini/github100.png">
 
         </div>
 
